Prevent word-breaks in the .field-content of .views-field-email in .office-views

--- a/less/custom.less
+++ b/less/custom.less
@@ -1388,6 +1388,12 @@ body.html {
 
         display: block;
       }
+
+      &.views-field-email {
+        .field-content {
+          word-break: keep-all;
+        }
+      }
     }
   }
 
